fix category page align

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -227,7 +227,7 @@
         padding-right: 2%;
     }
     .content {
-        padding-left: 6%;
+        padding-left: 0;
         padding-right: 0;
     }
     .cat-content h2,
